--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,30 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+    <meta
+      name="viewport"
+      content="minimum-scale=1, initial-scale=1, width=device-width"
+      />
+      <title>React App</title>
+      <script src="lib/v86/build/libv86.js"></script>
+        <script>
+            const V86_PATH = "lib/v86/";
+            window.addEventListener("load", function(){
+                window.emulator = new V86Starter({
+                    wasm_path: V86_PATH + "build/v86.wasm",
+                    bios: {url: V86_PATH + "bios/seabios.bin"},
+                    vga_bios: {url: V86_PATH + "bios/vgabios.bin"},
+                    memory_size: 256 * 1024 * 1024,
+                    vga_memory_size: 8 * 1024 * 1024,
+                    screen_container: document.getElementById("vm_container"),
+                    hda: {url: "./mp3.img"},
+                    autostart: true,
+                });
+            });
+        </script>
+    
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
