made fix to project bug

--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
                     vga_bios: {url: V86_PATH + "bios/vgabios.bin"},
                     memory_size: 256 * 1024 * 1024,
                     vga_memory_size: 8 * 1024 * 1024,
-                    screen_container: document.getElementById("vm_container"),
+                    screen_container: document.getElementById("linux_container"),
                     hda: {url: "./mp3.img"},
                     autostart: true,
                 });
